<resources>
    <string name="app_name">Alien_Scanner_450_Api</string>

    <string name="revertScan">Отменить сканирование</string>

    <string name="fullGoodName">Полное название</string>
    <string name="goodColorText">Цвет</string>
    <string name="goodSizeText">Размер</string>
    <string name="gootStateText">Состояние</string>

    <string name="scanButElStartText">Начать сканирование</string>
    <string name="scanButElStopText">Остановить сканирование</string>
</resources>
